feat(User): User login and session management
Added user login page:
- added `/login` route and form featuring username and password, with input validations
- added toasts for error and success messages
- modified AuthController to return response with cookie containing JWT token when logging in
- set Angular app config to automatically set received cookie in browser Cookies
- added HTTP interceptor to include token in Authorization header for each request after login
- user is redirected to login from register page and to Home page after login

Refs: #71